// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-badge should render with _label="**Te**xt" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <span class="kol-span__label md">
            <strong>
              Te
            </strong>
            xt
          </span>
          <span aria-hidden="true" class="kol-span__label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Badge fallback" _smartButton={"_ariaDescription":"Badge label","_label":"Remove"} 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge kol-badge--has-smart-button" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span" id="nonce">
        <span class="kol-span__container">
          <span class="kol-span__label md">
            Badge fallback
          </span>
          <span aria-hidden="true" class="kol-span__label" hidden=""></span>
        </span>
      </span>
      <kol-button-wc _ariacontrols="nonce" _ariadescription="Badge label" _hidelabel="" _label="Remove" class="kol-badge__smart-button"></kol-button-wc>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _color="#000000" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <span class="kol-span__label md">
            Text
          </span>
          <span aria-hidden="true" class="kol-span__label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _icons="codicon codicon-home" _color="#000000" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <span class="icon kol-icon left">
            <i aria-hidden="true" class="codicon codicon-home kol-icon__icon" part="icon" role="presentation"></i>
          </span>
          <span class="kol-span__label md">
            Text
          </span>
          <span aria-hidden="true" class="kol-span__label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _icons="codicon codicon-home" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <span class="icon kol-icon left">
            <i aria-hidden="true" class="codicon codicon-home kol-icon__icon" part="icon" role="presentation"></i>
          </span>
          <span class="kol-span__label md">
            Text
          </span>
          <span aria-hidden="true" class="kol-span__label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" 1`] = `
<kol-badge>
  <template shadowrootmode="open">
    <span class="kol-badge" style="background-color: #000; color: #959595;">
      <span class="kol-badge__label kol-span">
        <span class="kol-span__container">
          <span class="kol-span__label md">
            Text
          </span>
          <span aria-hidden="true" class="kol-span__label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;
